TEST_PROGRAMS/VALID_TYPECHECK/binaryop_booland.go
package main;

func main() {
    var x bool = true;
    var c bool = x && x;
    print(c);
}

