TEST_PROGRAMS/INVALID/15/literal1.go
package main

func important_string_func() {
    var s string = " Hello \" " World";
}
